servece component completed

--- a/src/Pages/Shared/Header/Header.css
+++ b/src/Pages/Shared/Header/Header.css
@@ -1,3 +1,6 @@
+
+@import url('https://fonts.googleapis.com/css2?family=Lora:ital,wght@1,600&display=swap');
+
 #navbar a{
     /* color:#a49695; */
 }
@@ -21,4 +24,5 @@
     color: #E42917;
     font-size: 30px;
     font-weight: bolder;
+    font-family: 'Lora', serif;
 }
